<resources>
    <string name="app_name">MyShoes</string>
    <string name="lm_name">Listen</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Teilen</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Hinzufügen</string>
    <string name="drawer_import_export">Import/Export</string>
    <string name="drawer_settings">Einstellungen</string>
    <string name="drawer_listmanagement">Listenverwaltung</string>
    <string name="popup_titel">Titel</string>
    <string name="popup_description">Beschreibung</string>
    <string name="popup_tag">Tag</string>
    <string name="popup_ok">OK</string>
    <string name="popup_close_button">closeButton</string>
    <string name="popup_photo_view">takePhoto</string>
    <string name="popup_capture">Capture</string>
    <string name="popup_price">Preis</string>
    <string name="popup_lm_add_titel">Neue Liste</string>
    <string name="popup_lm_add_ok">OK</string>
    <string name="popup_lm_add_chancel">Abbruch</string>
    <string name="card_titel">Titel</string>
    <string name="card_description">Beschreibung</string>
    <string name="card_tag">Tag</string>
    <string name="card_price">Preis</string>
    <string name="menu_select">Selected</string>
    <string name="action_back">Zurück</string>
</resources>
