<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tech.oma.myshoes.activities.ListManagementActivity">

    <item
        android:id="@+id/lm_action_add"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/lm_action_edit"
        android:title="@string/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/lm_action_delete"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="always" />
</menu>