<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_lm_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/basicColorThree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3">

        <TextView
            style="@style/AppTheme.TextHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/popwin_padding"
            android:text="@string/popup_lm_add_titel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35">

        <EditText
            android:id="@+id/lm_new_list_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textShortMessage"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/lm_add_chancel"
                style="@style/AppTheme.TextButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/popup_lm_add_chancel"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/lm_add_ok"
                style="@style/AppTheme.TextButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/popup_lm_add_ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>